--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,17 +71,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: MontserratA
+      fonts:
+        - asset: assets/fonts/montserrat_alternates/MontserratAlternates-Light.ttf
+        - asset: assets/fonts/montserrat_alternates/MontserratAlternates-Regular.ttf
+        - asset: assets/fonts/montserrat_alternates/MontserratAlternates-Medium.ttf
+        - asset: assets/fonts/montserrat_alternates/MontserratAlternates-SemiBold.ttf
+        - asset: assets/fonts/montserrat_alternates/MontserratAlternates-Bold.ttf
+        - asset: assets/fonts/montserrat_alternates/MontserratAlternates-ExtraBold.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
